[package]
name = "repotome"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Pack a git repository into a single text document for LLMs. Fast Rust CLI."
authors = ["printemps.tokyo <develop@printemps.tokyo>"]
repository = "https://github.com/printemps-tokyo/repotome"
homepage = "https://github.com/printemps-tokyo/repotome"
readme = "README.md"
keywords = ["cli", "llm", "git", "context", "ai"]
categories = ["command-line-utilities"]

[[bin]]
name = "repotome"
path = "src/main.rs"

[lib]
name = "repotome"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
globset = "0.4"
ignore = "0.4"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
